:books: DOCS: documentação sala-equipamento
